# datawrap

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/database/scripts/: insert_data.py  update_data.py
dbt_project/snapshots/: customers.sql
dbt_project/tests/: assert_customer_dimension_has_no_row_loss.sql
