[project]
name = "datawrap"
version = "0.1.0"
description = "Data handling, gift wrapped: dbt + dbt/mcp + postgresql"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.9",
    "dbt-postgres>=1.9.0",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
]
